# TeamAlpha-data

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml  schema_tables.md
.github/workflows/: deploy.yml
bronze/: README.md  common.py  dart.py  datago.py  financials.py  hist.py  index.py  ingest.py  krx.py  members.py  sink.py  stock.py
deploy/: Dockerfile
pipeline/: daily_full.py  jobs.py
pipeline/bronze/: financials.py  index.py  stock_krxapi.py  stock_marcap.py
pipeline/common/: db.py  paths.py  sink.py
pipeline/silver/: __init__.py  assets.py  financials.py  load.py  prices.py
sql/: schema.sql
