[project]
name = "teamalpha-ingest"
version = "0.1.0"
description = "KRX raw 데이터 수집 → S3 bronze 적재 (배치 파이프라인)"
requires-python = ">=3.12"
dependencies = [
    "pykrx>=1.2.8",
    "pandas",
    "pyarrow",
    "boto3",
    "python-dotenv",
    "requests",
    "opendartreader>=0.2.3",
]

[tool.uv]
package = false
