[project]
name = "teamalpha-data"
version = "0.1.0"
description = "KRX·DART 데이터 파이프라인 — bronze(S3) 수집 + silver(RDS) 정규화 (배치)"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "pyarrow",
    "boto3",
    "python-dotenv",
    "requests",
    "psycopg[binary]",
]

[tool.uv]
package = false
